--- a/dashboard/aced-foundation.html
+++ b/dashboard/aced-foundation.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <!-- //Preloader -->
-<div class="wrapper light-theme">
+<div class="wrapper light-theme dark-template">
     <!-- Top Header -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="mobile-only-brand pull-left">
@@ -177,19 +177,19 @@
 
             <li><hr class="light-grey-hr mb-10"/></li>
 
-            <li><a href="aced-gaming.html" target="_blank">
+            <li><a href="aced-gaming.html">
                 <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Gaming</span></div>
                 <div class="clearfix"></div>
             </a></li>
             <li><hr class="light-grey-hr mb-10"/></li>
 
-            <li><a href="aced-streaming.html" target="_blank">
+            <li><a href="aced-streaming.html">
                 <div class="pull-left"><i class="mdi mdi-view-stream mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
                 <div class="clearfix"></div>
             </a></li>
             <li><hr class="light-grey-hr mb-10"/></li>
 
-            <li><a href="aced-snap.html" target="_blank">
+            <li><a href="aced-snap.html">
                 <div class="pull-left"><i class="mdi mdi-snapchat mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
                 <div class="clearfix"></div>
             </a></li>
