--- a/dashboard/aced-snap.html
+++ b/dashboard/aced-snap.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <!-- //Preloader -->
-<div class="wrapper light-theme">
+<div class="wrapper light-theme dark-template">
     <!-- Top Header -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="mobile-only-brand pull-left">
