--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -167,46 +167,46 @@
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li> <a  href="ecommerce-products-details.html">
+      <li> <a  href="../ecommerce-products-details.html">
         <div class="pull-left"><i class="mdi mdi-cart mr-20"></i><span class="right-nav-text">Store</span></div>
         <div class="clearfix"></div>
       </a></li>
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="email-inbox.html">
+      <li><a href="../email-inbox.html">
         <div class="pull-left"><i class="mdi mdi-email-outline mr-20"></i><span class="right-nav-text">MailBox</span></div>
         <div class="clearfix"></div>
       </a></li>
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="profile.html">
+      <li><a href="../profile.html">
         <div class="pull-left"><i class="mdi mdi-face-profile mr-20"></i><span class="right-nav-text">Profile</span></div>
         <div class="clearfix"></div>
       </a></li>
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="aced-gaming.html">
+      <li><a href="../aced-gaming.html">
         <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Gaming</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="aced-streaming.html">
+      <li><a href="../aced-streaming.html">
         <div class="pull-left"><i class="mdi mdi-view-stream mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="aced-snap.html">
+      <li><a href="../aced-snap.html">
         <div class="pull-left"><i class="mdi mdi-snapchat mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="aced-foundation.html">
+      <li><a href="../aced-foundation.html">
         <div class="pull-left"><i class="mdi mdi-basecamp mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
         <div class="clearfix"></div>
       </a></li>
@@ -220,7 +220,7 @@
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
-      <li><a href="faq.html">
+      <li><a href="../faq.html">
         <div class="pull-left"><i class="mdi mdi-comment-question-outline mr-20"></i><span class="right-nav-text">FAQ</span></div>
         <div class="clearfix"></div>
       </a></li>
