--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -14,7 +14,7 @@
 <link href="../plugins/vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
 <!-- select2 CSS -->
 <link href="../plugins/vendors/bower_components/select2/dist/css/select2.min.css" rel="stylesheet" type="text/css"/>
-<link href="../plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">
+<!--<link href="../plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">-->
 <!-- Vector CSS -->
 <link href="../plugins/vendors/bower_components/vectormap/jquery-jvectormap-2.0.2.css" rel="stylesheet" />
 <!--This page css - Morris CSS -->
@@ -1450,8 +1450,8 @@
 <script src="../plugins/vendors/bower_components/echarts/dist/echarts-en.min.js"></script>
 <!-- Select2 JavaScript --> 
 <script src="../plugins/vendors/bower_components/select2/dist/js/select2.full.min.js"></script>
-<!-- Toast JavaScript --> 
-<script src="../plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script>
+<!--&lt;!&ndash; Toast JavaScript &ndash;&gt; -->
+<!--<script src="../plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script>-->
 <!-- Webticker Javascript --> 
 <script src="../plugins/vendors/bower_components/web-ticker/jquery.webticker.min.js"></script>
 <!-- Amcharts charts JavaScript --> 
