--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -14,7 +14,7 @@
 <link href="plugins/vendors/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css"/>
 <!-- select2 CSS -->
 <link href="plugins/vendors/bower_components/select2/dist/css/select2.min.css" rel="stylesheet" type="text/css"/>
-<link href="plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">
+<!--<link href="plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.css" rel="stylesheet" type="text/css">-->
 
 <!-- Custom CSS -->
 <link href="plugins/assets/css/default.css" rel="stylesheet" type="text/css">
@@ -983,7 +983,7 @@
 <!-- Select2 JavaScript --> 
 <script src="plugins/vendors/bower_components/select2/dist/js/select2.full.min.js"></script> 
 <!-- Toast JavaScript --> 
-<script src="plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script> 
+<!--<script src="plugins/vendors/bower_components/jquery-toast-plugin/dist/jquery.toast.min.js"></script> -->
 <!-- Webticker Javascript --> 
 <script src="plugins/vendors/bower_components/web-ticker/jquery.webticker.min.js"></script> 
 <!-- Amcharts charts JavaScript --> 
