--- a/dashboard/aced-escrow.html
+++ b/dashboard/aced-escrow.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard-AceD Snap</title>
+    <title>Dashboard-AceD Escrow</title>
     <meta name="description" content="" />
     <meta name="keywords" content="admin, admin dashboard, admin template" />
     <meta name="author" content="SRGIT"/>
@@ -189,7 +189,7 @@
             </a></li>
             <li><hr class="light-grey-hr mb-10"/></li>
 
-            <li><a class="active-page" href="aced-snap.html">
+            <li><a href="aced-snap.html">
                 <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
                 <div class="clearfix"></div>
             </a></li>
@@ -201,19 +201,18 @@
             </a></li>
 
             <li><hr class="light-grey-hr mb-10"/></li>
-            <li><a  href="aced-escrow.html">
+            <li><a class="active-page" href="aced-escrow.html">
                 <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Escrow</span></div>
                 <div class="clearfix"></div>
             </a></li>
-            <li><hr class="light-grey-hr mb-10"/></li>
 
+            <li><hr class="light-grey-hr mb-10"/></li>
             <li><a href="https://www.coinexchange.io/market/AceD/BTC" target="_blank">
                 <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
                 <div class="clearfix"></div>
             </a></li>
 
             <li><hr class="light-grey-hr mb-10"/></li>
-
             <li><a href="faq.html">
                 <div class="pull-left"><i class="mdi mdi-comment-question-outline mr-20"></i><span class="right-nav-text">FAQ</span></div>
                 <div class="clearfix"></div>
@@ -570,14 +569,14 @@
             <!-- Title -->
             <div class="row heading-bg">
                 <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                    <h5 class="txt-dark">AceD Snap</h5>
+                    <h5 class="txt-dark">AceD Escrow</h5>
                 </div>
                 <!-- Breadcrumb -->
                 <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Dashboard</a></li>
                         <li><a href="#"><span>Other Pages</span></a></li>
-                        <li class="active"><span>AceD Snap</span></li>
+                        <li class="active"><span>AceD Escrow</span></li>
                     </ol>
                 </div>
                 <!-- /Breadcrumb -->
