--- a/dashboard/aced-foundation.html
+++ b/dashboard/aced-foundation.html
@@ -184,26 +184,32 @@
             <li><hr class="light-grey-hr mb-10"/></li>
 
             <li><a href="aced-streaming.html">
-                <div class="pull-left"><i class="mdi mdi-view-stream mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
+                <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
                 <div class="clearfix"></div>
             </a></li>
             <li><hr class="light-grey-hr mb-10"/></li>
 
             <li><a href="aced-snap.html">
-                <div class="pull-left"><i class="mdi mdi-snapchat mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
+                <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
                 <div class="clearfix"></div>
             </a></li>
             <li><hr class="light-grey-hr mb-10"/></li>
 
-            <li><a class="active-page" href="aced-foundation.html" target="_blank">
-                <div class="pull-left"><i class="mdi mdi-basecamp mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
+            <li><a class="active-page" href="aced-foundation.html">
+                <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
+                <div class="clearfix"></div>
+            </a></li>
+
+            <li><hr class="light-grey-hr mb-10"/></li>
+            <li><a  href="aced-escrow.html">
+                <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Escrow</span></div>
                 <div class="clearfix"></div>
             </a></li>
 
             <li><hr class="light-grey-hr mb-10"/></li>
 
             <li><a href="https://www.coinexchange.io/market/AceD/BTC" target="_blank">
-                <div class="pull-left"><i class="mdi mdi-comment-question-outline mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
+                <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
                 <div class="clearfix"></div>
             </a></li>
 
