--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -192,26 +192,32 @@
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="aced-streaming.html">
-        <div class="pull-left"><i class="mdi mdi-view-stream mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="aced-snap.html">
-        <div class="pull-left"><i class="mdi mdi-snapchat mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="aced-foundation.html">
-        <div class="pull-left"><i class="mdi mdi-basecamp mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
+        <div class="clearfix"></div>
+      </a></li>
+
+      <li><hr class="light-grey-hr mb-10"/></li>
+      <li><a  href="aced-escrow.html">
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Escrow</span></div>
         <div class="clearfix"></div>
       </a></li>
 
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="https://www.coinexchange.io/market/AceD/BTC" target="_blank">
-        <div class="pull-left"><i class="mdi mdi-comment-question-outline mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
         <div class="clearfix"></div>
       </a></li>
 
@@ -651,7 +657,7 @@
         <div class="col-md-8 col-md-offset-2">
           <div align="center">
             <a href="https://ctsplatform.cc/" title="CTS - Crypto Trading Solutions" target="_blank">
-              <img src="plugins/assets/img/cts.png" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
+              <img src="plugins/assets/img/aced.gif" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
             </a>
           </div>
         </div>
@@ -713,12 +719,11 @@
               <div class="panel-body row pt-10 pb-15 bitcoin-wdgt">
                 <div class="tickercontainer-main">
                   <ul id="webTicker">
-                    <li><i class="mdi mdi-bitcoin text-warning"></i> BTC <span class="coin-value"> $12.015451</span></li>
-                    <li><i class="mdi mdi-currency-eth text-primary"></i> ETH <span class="coin-value"> $11.56454</span></li>
-                    <li><i class="mdi mdi-currency-ngn text-danger"></i> NGN <span class="coin-value"> $11.3215</span></li>
-                    <li><i class="mdi mdi-currency-rub text-info"></i> RUB <span class="coin-value"> $0.12345</span></li>
-                    <li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $10.98115</span></li>
-                    <li><i class="mdi mdi-currency-chf text-success"></i> CHF <span class="coin-value"> $9.156151</span></li>
+                    <li><i><img src="../favicon.png" style="width:14px;margin-bottom: -1px;"></i> ACED <span class="coin-value"> $0.411216</span></li>
+                    <li><i class="mdi mdi-bitcoin text-warning"></i> BTC <span class="coin-value"> $6,095.46</span></li>
+                    <li><i><img src="plugins/assets/img/dash.png" style="width:14px;margin-bottom: -3px;"></i> DASH <span class="coin-value"> $228.7990</span></li>
+                    <li><i class="mdi mdi-currency-eth text-primary"></i> ETH <span class="coin-value"> $427.58</span></li>
+                    <li><i class="mdi mdi-currency-gbp text-default"></i> GBP <span class="coin-value"> $1.315461</span></li>
                     <li><i class="mdi mdi-currency-eur text-danger"></i> EUR <span class="coin-value"> $1.1561556</span></li>
                   </ul>
                 </div>
@@ -785,18 +790,18 @@
                       <td>1,000</td>
                       <td>$440</td>
                     </tr>
-                    <tr>
-                      <td><div class="coinbtc"></div></td>
-                      <td><a href="#">Bitcoin (BTC)</a></td>
-                      <td>$6,176.1845</td>
-                      <td>1.60%</td>
-                      <td>$108,027,742.28</td>
-                      <td>$105,768,513,036</td>
-                      <td>7.00%</td>
-                      <td>4,676	</td>
-                      <td>1,000</td>
-                      <td>$226,757</td>
-                    </tr>
+                    <!--<tr>-->
+                      <!--<td><div class="coinbtc"></div></td>-->
+                      <!--<td><a href="#">Bitcoin (BTC)</a></td>-->
+                      <!--<td>$6,176.1845</td>-->
+                      <!--<td>1.60%</td>-->
+                      <!--<td>$108,027,742.28</td>-->
+                      <!--<td>$105,768,513,036</td>-->
+                      <!--<td>7.00%</td>-->
+                      <!--<td>4,676	</td>-->
+                      <!--<td>1,000</td>-->
+                      <!--<td>$226,757</td>-->
+                    <!--</tr>-->
                     <tr>
                       <td><div class="coindash"></div></td>
                       <td><a href="#">Dash (DASH)</a></td>
@@ -810,18 +815,6 @@
                       <td>$226,757</td>
                     </tr>
                     <tr>
-                      <td><div class="coinsmart"></div></td>
-                      <td>  <a href="#">SmartCash (SMART)</a></td>
-                      <td>$0.0704	</td>
-                      <td>3.09 %</td>
-                      <td>$2,027,460</td>
-                      <td>$74,163,810</td>
-                      <td>58.05%	</td>
-                      <td>12,837	</td>
-                      <td>10,000</td>
-                      <td>$704</td>
-                    </tr>
-                    <tr>
                       <td><div class="coinxzc"></div></td>
                       <td> <a href="#">Zcoin (XZC)</a></td>
                       <td>$14.4901</td>
@@ -832,6 +825,18 @@
                       <td>3,185	</td>
                       <td>1,000	</td>
                       <td>$14,490</td>
+                    </tr>
+                    <tr>
+                      <td><div class="coinsmart"></div></td>
+                      <td>  <a href="#">SmartCash (SMART)</a></td>
+                      <td>$0.0704	</td>
+                      <td>3.09 %</td>
+                      <td>$2,027,460</td>
+                      <td>$74,163,810</td>
+                      <td>58.05%	</td>
+                      <td>12,837	</td>
+                      <td>10,000</td>
+                      <td>$704</td>
                     </tr>
                     <tr>
                       <td><div class="coinpivx"></div></td>
@@ -868,6 +873,42 @@
                       <td>571</td>
                       <td>10,000</td>
                       <td>$12,247</td>
+                    </tr>
+                    <tr>
+                      <td><div class="coinlpc"></div></td>
+                      <td><a href="#">  LightPayCoin (LPC)</a></td>
+                      <td>$7.2424</td>
+                      <td>0.00 %</td>
+                      <td>$507,897</td>
+                      <td>$2,175,589</td>
+                      <td>1,451.92%	</td>
+                      <td>208</td>
+                      <td>1,000</td>
+                      <td>$7,242</td>
+                    </tr>
+                    <tr>
+                      <td><div class="coinhxx"></div></td>
+                      <td><a href="#">HexxCoin (HXX)</a></td>
+                      <td>$3.9647</td>
+                      <td>12.52 %</td>
+                      <td>$292,932</td>
+                      <td>$6,613,926</td>
+                      <td>67.66%</td>
+                      <td>118</td>
+                      <td>2,000</td>
+                      <td>$7,929</td>
+                    </tr>
+                    <tr>
+                      <td><div class="coinphr"></div></td>
+                      <td><a href="#">ION (ION)</a></td>
+                      <td>$0.8763</td>
+                      <td>-2.76 %</td>
+                      <td>$152,861</td>
+                      <td>$18,716,185</td>
+                      <td>26.47%</td>
+                      <td>561</td>
+                      <td>20,000</td>
+                      <td>$17,527</td>
                     </tr>
                     <tr>
                       <td><div class="coinxsn"></div></td>
@@ -908,12 +949,12 @@
       <div class="row" style="margin: 3% 0;">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding: 1%;">
           <a href="#" target="_blank">
-            <img src="plugins/assets/img/desktop.gif" style="width: 100%;">
+            <img src="plugins/assets/img/aced.gif" style="width: 100%;">
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"  style="padding: 1%;">
           <a href="#" target="_blank">
-            <img src="plugins/assets/img/desktop.png" style="width: 100%;">
+            <img src="plugins/assets/img/Aced11.gif" style="width: 100%;">
           </a>
         </div>
       </div>
