--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -195,26 +195,31 @@
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="../aced-streaming.html">
-        <div class="pull-left"><i class="mdi mdi-view-stream mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Streaming</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="../aced-snap.html">
-        <div class="pull-left"><i class="mdi mdi-snapchat mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Snap</span></div>
         <div class="clearfix"></div>
       </a></li>
       <li><hr class="light-grey-hr mb-10"/></li>
 
       <li><a href="../aced-foundation.html">
-        <div class="pull-left"><i class="mdi mdi-basecamp mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Foundation</span></div>
         <div class="clearfix"></div>
       </a></li>
 
       <li><hr class="light-grey-hr mb-10"/></li>
+      <li><a  href="aced-escrow.html">
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">AceD Escrow</span></div>
+        <div class="clearfix"></div>
+      </a></li>
 
+      <li><hr class="light-grey-hr mb-10"/></li>
       <li><a href="https://www.coinexchange.io/market/AceD/BTC" target="_blank">
-        <div class="pull-left"><i class="mdi mdi-comment-question-outline mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
+        <div class="pull-left"><i class="mdi mdi-youtube-gaming mr-20"></i><span class="right-nav-text">CoinExchange </span></div>
         <div class="clearfix"></div>
       </a></li>
 
@@ -653,7 +658,7 @@
         <div class="col-md-8 col-md-offset-2">
           <div align="center">
             <a href="https://ctsplatform.cc/" title="CTS - Crypto Trading Solutions" target="_blank">
-              <img src="../plugins/assets/img/cts.png" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
+              <img src="../plugins/assets/img/aced.gif" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
             </a>
           </div>
         </div>
@@ -1183,7 +1188,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-12"><img src="../plugins/assets/img/aced.gif" style="width: 100%;"></div>
+                <div class="col-md-12"><img src="../plugins/assets/img/Aced11.gif" style="width: 100%;"></div>
                 <!--table-->
                 <div class="col-xs-12 pa-20">
                     <div class="panel panel-default card-view">
