--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -656,7 +656,7 @@
       <div class="row" style="margin:3% 0;">
         <div class="col-md-8 col-md-offset-2">
           <div align="center">
-            <a href="https://ctsplatform.cc/" title="CTS - Crypto Trading Solutions" target="_blank">
+            <a href="https://masternodes.online/currencies/ACED/" title="CTS - Crypto Trading Solutions" target="_blank">
               <img src="plugins/assets/img/aced.gif" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
             </a>
           </div>
@@ -948,12 +948,12 @@
       <!--Row-->
       <div class="row" style="margin: 3% 0;">
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="padding: 1%;">
-          <a href="#" target="_blank">
+          <a href="https://masternodes.online/currencies/ACED/" target="_blank">
             <img src="plugins/assets/img/aced.gif" style="width: 100%;">
           </a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12"  style="padding: 1%;">
-          <a href="#" target="_blank">
+          <a href="https://www.acedcoin.com" target="_blank">
             <img src="plugins/assets/img/Aced11.gif" style="width: 100%;">
           </a>
         </div>
