--- a/dashboard/stats/aced.html
+++ b/dashboard/stats/aced.html
@@ -657,7 +657,7 @@
       <div class="row" style="margin:3% 0;">
         <div class="col-md-8 col-md-offset-2">
           <div align="center">
-            <a href="https://ctsplatform.cc/" title="CTS - Crypto Trading Solutions" target="_blank">
+            <a href="https://masternodes.online/currencies/ACED/" title="CTS - Crypto Trading Solutions" target="_blank">
               <img src="../plugins/assets/img/aced.gif" style="max-width: 100%; height: auto" alt="CTS - Crypto Trading Solutions">
             </a>
           </div>
@@ -1188,7 +1188,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-12"><img src="../plugins/assets/img/Aced11.gif" style="width: 100%;"></div>
+                <div class="col-md-12">
+                  <a href="https://www.acedcoin.com"><img src="../plugins/assets/img/Aced11.gif" style="width: 100%;"></a>
+                </div>
                 <!--table-->
                 <div class="col-xs-12 pa-20">
                     <div class="panel panel-default card-view">
