--- a/dashboard/ecommerce-products-details.html
+++ b/dashboard/ecommerce-products-details.html
@@ -600,92 +600,26 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr >
-                      <td>#12345</td>
-                      <td class="vertical-align-middle" ><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Notebook Asus</div></td>
-                      <td>Electronics</td>
-                      <td>KS125</td>
-                      <td>$1234</td>
-                      <td>12</td>
+                    <tr>
+                      <td>#1</td>
+                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
+                        <div class="pull-left pa-10">Listing coin</div></td>
+                      <td>coin</td>
+                      <td>Aced1</td>
+                      <td>1000 AceD</td>
+                      <td>100000000</td>
                       <td ><span class="label label-success">In Stock</span></td>
                       <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
                     </tr>
                     <tr>
-                      <td>#15551</td>
+                      <td>#2</td>
                       <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Gold Ring</div></td>
-                      <td>Jewellery</td>
-                      <td>PS544</td>
-                      <td>$1234</td>
-                      <td>10</td>
-                      <td ><span class="label label-danger">Out of Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>#11232</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Notebook Asus</div></td>
-                      <td>Electronics</td>
-                      <td>QW155</td>
-                      <td>$5678</td>
-                      <td>20</td>
-                      <td ><span class="label label-success">In Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>#11232</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Gold Ring</div></td>
-                      <td>Jewellery</td>
-                      <td>KS125</td>
-                      <td>$1245</td>
-                      <td>25</td>
-                      <td><span class="label label-danger">Out of Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>#11232</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Notebook Asus</div></td>
-                      <td>Electronics</td>
-                      <td>PS544</td>
-                      <td>$1245</td>
-                      <td>30</td>
-                      <td ><span class="label label-success">In Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>#11232</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">System Architect</div></td>
-                      <td>Electronics</td>
-                      <td>KS125</td>
-                      <td>$1245</td>
-                      <td>22</td>
-                      <td ><span class="label label-danger">Out of Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>#11315</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">System Architect</div></td>
-                      <td>Jewellery</td>
-                      <td>PS544</td>
-                      <td>$1245</td>
-                      <td>40</td>
-                      <td ><span class="label label-success">In Stock</span></td>
-                      <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td>#11315</td>
-                      <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">System Architect</div></td>
-                      <td>Electronics</td>
-                      <td>KS125</td>
-                      <td>$1245</td>
-                      <td>22</td>
-                      <td><span class="label label-danger">Out of Stock</span></td>
+                        <div class="pull-left pa-10">Banners</div></td>
+                      <td>design</td>
+                      <td>Aced2</td>
+                      <td>500-3000 AceD</td>
+                      <td>10000000</td>
+                      <td><span class="label label-success">In Stock</span></td>
                       <td class="text-center"><a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Edit"><i class="mdi mdi-lead-pencil font-18 txt-primary"></i></a> &nbsp; <a href="javascript:void(0)" class="text-inverse" title="" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-close txt-danger font-18"></i></a></td>
                     </tr>
                   </tbody>
