--- a/dashboard/ecommerce-products-details.html
+++ b/dashboard/ecommerce-products-details.html
@@ -576,7 +576,7 @@
       <!-- Title -->
       <div class="row heading-bg">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h5 class="txt-dark">Products Details</h5>
+          <h5 class="txt-dark">Aced Store</h5>
         </div>
       </div>
       <!-- /Title --> 
@@ -603,7 +603,7 @@
                     <tr>
                       <td>#1</td>
                       <td class="vertical-align-middle"><div class="pull-left"><img src="http://via.placeholder.com/36x36" alt="" title=""></div>
-                        <div class="pull-left pa-10">Listing coin</div></td>
+                        <div class="pull-left pa-10">Listing Coin</div></td>
                       <td>coin</td>
                       <td>Aced1</td>
                       <td>1000 AceD</td>
